--- a/store/templates/store/orders/order-view.html
+++ b/store/templates/store/orders/order-view.html
@@ -64,8 +64,12 @@
                             </table>
                             <h4>Grand Total: <span class="float-end"> {{order.total_price}}</span></h4>
                             <h6>Payment Method: {{order.payment_mode}}</h6>
+
                             <h6>Order Status: {{order.status}}</h6>
-                            <h6>Tracking No: {{order.tracking_no}}</h6> </h6>
+                            <h6>Tracking No: {{order.tracking_no}}</h6>
+                            {% if order.payment_id %}
+                            <h6>Payment ID: {{order.payment_id}}</h6>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
