--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -129,7 +129,7 @@
     {% endif %}
     
     {% if new_products %}
-    <div class="container">
+    <div class="container my-3">
         <div class="row">
             <div class="col-md-15">
                 <h1>Just Arrived</h1>
