--- a/store/templates/store/wishListView.html
+++ b/store/templates/store/wishListView.html
@@ -4,7 +4,7 @@
 <div class="py-3 bg-primary">
     <div class="container">
         <a class="text-white" href="{% url 'home' %}">Home</a> /
-        <a class="text-white" href="{% url 'viewCart' %}">Cart</a>
+        <a class="text-white" href="{% url 'viewWishList' %}">Wishlist</a>
     </div>
 </div>
 
